--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,10 +13,11 @@ copyright: "Copyright &copy; 2019 mottosso"
 # Page tree
 nav:
   - Home: index.md
-  - Guides: guides.md
+  - Guide: guides.md
   - Reference: reference.md
-  - Package Management: rez.md
-  - Localisation: localisation.md
+  - Packaging: rez.md
+  # - Localisation: localisation.md
+  - Examples: examples.md
   - About: about.md
 
 docs_dir: pages
@@ -55,6 +56,7 @@ markdown_extensions:
   - pymdownx.betterem
   - pymdownx.caret
   - pymdownx.critic
+  - pymdownx.details
   - pymdownx.emoji:
       emoji_generator: !!python/name:pymdownx.emoji.to_svg
   - pymdownx.inlinehilite
