Add some graphics and modified-dates to pages

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -66,3 +66,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tasklist
   - pymdownx.tilde
+
+plugins:
+  - search
+  - git-revision-date
