--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: Allzpark
 site_description: The package-based application launcher
 site_author: mottosso
-site_url: https://allzpark.sh
+site_url: https://allzpark.com
 
 # Repository
 repo_name: mottosso/allzpark
