--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
   # Ensure Azure triggers a build on a new tag
   # We use these for GitHub releases
   tags:
-    include: ['*']
+    include: ["*"]
 
   paths:
     # Do not trigger a build on changes at these paths
@@ -20,25 +20,79 @@ trigger:
 
 
 jobs:
+
+  # -----------------------------------------------------------------------
+  #
+  # Test
+  #
+  # -----------------------------------------------------------------------
+
+  - job: Ubuntu
+    pool:
+      vmImage: "ubuntu-16.04"  # Xenial
+    strategy:
+      matrix:
+        Python27:
+          python.version: "2.7"
+        Python35:
+          python.version: "3.5"
+        Python36:
+          python.version: "3.6"
+        Python37:
+          python.version: "3.7"
+
+    steps:
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: "$(python.version)"
+        displayName: "Use Python $(python.version)"
+
+      - script: |
+          pip install --upgrade pip
+          pip install .
+        displayName: "pip install"
+
+
+  - job: MacOS
+    pool:
+      vmImage: "macOS-10.13"  # High-Sierra
+    strategy:
+      matrix:
+        Python27:
+          python.version: "2.7"
+        Python37:
+          python.version: "3.7"
+
+    steps:
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: "$(python.version)"
+        displayName: "Use Python $(python.version)"
+
+      - script: |
+          pip install --upgrade pip
+          pip install .
+        displayName: "pip install"
+
   - job: Windows
     pool:
       vmImage: vs2017-win2016
     strategy:
       matrix:
         Python27:
-          python.version: '2.7'
+          python.version: "2.7"
         Python37:
-          python.version: '3.7'
+          python.version: "3.7"
 
     steps:
       - task: UsePythonVersion@0
         inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
+          versionSpec: "$(python.version)"
+        displayName: "Use Python $(python.version)"
       - powershell: |
           pip install --upgrade pip
           pip install .
-        displayName: 'pip install'
+        displayName: "pip install"
 
 
   # -----------------------------------------------------------------------
@@ -50,17 +104,17 @@ jobs:
   - job: Deploy
     condition: startsWith(variables['Build.SourceBranch'], 'refs/tags')
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: "ubuntu-latest"
     strategy:
       matrix:
         Python37:
-          python.version: '3.7'
+          python.version: "3.7"
 
     steps:
       - task: UsePythonVersion@0
         inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
+          versionSpec: "$(python.version)"
+        displayName: "Use Python $(python.version)"
 
       - script: |
           pip install wheel twine
