--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,17 +29,40 @@ jobs:
 
   - job: Ubuntu
     pool:
-      vmImage: "ubuntu-16.04"  # Xenial
+      vmImage: "ubuntu-20.04"  # Focal
     strategy:
       matrix:
-        Python27:
+        Py27-Rez:
           python.version: "2.7"
-        Python35:
+          rez.project: "rez"
+
+        Py27-BleedingRez:
+          python.version: "2.7"
+          rez.project: "bleeding-rez"
+
+        Py35-Rez:
           python.version: "3.5"
-        Python36:
+          rez.project: "rez"
+
+        Py35-BleedingRez:
+          python.version: "3.5"
+          rez.project: "bleeding-rez"
+
+        Py36-Rez:
           python.version: "3.6"
-        Python37:
+          rez.project: "rez"
+
+        Py36-BleedingRez:
+          python.version: "3.6"
+          rez.project: "bleeding-rez"
+
+        Py37-Rez:
           python.version: "3.7"
+          rez.project: "rez"
+
+        Py37-BleedingRez:
+          python.version: "3.7"
+          rez.project: "bleeding-rez"
 
     steps:
       - task: UsePythonVersion@0
@@ -48,8 +71,43 @@ jobs:
         displayName: "Use Python $(python.version)"
 
       - script: |
-          pip install . --no-deps
-        displayName: "pip install"
+          git clone https://github.com/nerdvegas/rez.git rez-src
+          cd rez-src
+          sudo pip install .
+        condition: eq(variables['rez.project'], 'rez')
+        displayName: "pip install rez (for API)"
+
+      - script: |
+          sudo pip install bleeding-rez
+        condition: eq(variables['rez.project'], 'bleeding-rez')
+        displayName: "pip install bleeding-rez"
+
+      - script: |
+          sudo apt-get install python-pyside
+          sudo python -c "from PySide import QtCore;print(QtCore.__version__)"
+        condition: startsWith(variables['python.version'], '2.')
+        displayName: "pip install PySide"
+
+      - script: |
+          sudo apt-get install python3-pyside2.qtcore \
+                               python3-pyside2.qtgui \
+                               python3-pyside2.qtwidgets \
+                               python3-pyside2.qtsvg
+          sudo python -c "from PySide2 import QtCore;print(QtCore.__version__)"
+        condition: startsWith(variables['python.version'], '3.')
+        displayName: "pip3 install PySide2"
+
+      - script: |
+          sudo pip install . --no-deps
+        displayName: "pip install allzpark"
+
+      - script: |
+          sudo apt-get install xvfb
+        displayName: "Setup Xvfb"
+
+      - script: |
+          xvfb-run sudo python -m unittest discover
+        displayName: "run tests"
 
 
   - job: MacOS
@@ -57,10 +115,21 @@ jobs:
       vmImage: "macOS-10.15"
     strategy:
       matrix:
-        Python27:
+        Py27-Rez:
           python.version: "2.7"
-        Python37:
+          rez.project: "rez"
+
+        Py27-BleedingRez:
+          python.version: "2.7"
+          rez.project: "bleeding-rez"
+
+        Py37-Rez:
           python.version: "3.7"
+          rez.project: "rez"
+
+        Py37-BleedingRez:
+          python.version: "3.7"
+          rez.project: "bleeding-rez"
 
     steps:
       - task: UsePythonVersion@0
@@ -69,27 +138,93 @@ jobs:
         displayName: "Use Python $(python.version)"
 
       - script: |
+          git clone https://github.com/nerdvegas/rez.git rez-src
+          cd rez-src
+          pip install .
+        condition: eq(variables['rez.project'], 'rez')
+        displayName: "pip install rez (for API)"
+
+      - script: |
+          pip install bleeding-rez
+        condition: eq(variables['rez.project'], 'bleeding-rez')
+        displayName: "pip install bleeding-rez"
+
+      - script: |
+          brew tap cartr/qt4
+          brew install qt@4
+          pip install PySide
+        condition: startsWith(variables['python.version'], '2.')
+        displayName: "pip install PySide"
+
+      - script: |
+          pip install PySide2
+        condition: startsWith(variables['python.version'], '3.')
+        displayName: "pip3 install PySide2"
+
+      - script: |
           pip install . --no-deps
-        displayName: "pip install"
+        displayName: "pip install allzpark"
+
+      - script: |
+          python -m unittest discover
+        displayName: "run tests"
 
   - job: Windows
     pool:
       vmImage: vs2017-win2016
     strategy:
       matrix:
-        Python27:
+        Py27-Rez:
           python.version: "2.7"
-        Python37:
+          rez.project: "rez"
+
+        Py27-BleedingRez:
+          python.version: "2.7"
+          rez.project: "bleeding-rez"
+
+        Py37-Rez:
           python.version: "3.7"
+          rez.project: "rez"
+
+        Py37-BleedingRez:
+          python.version: "3.7"
+          rez.project: "bleeding-rez"
 
     steps:
       - task: UsePythonVersion@0
         inputs:
           versionSpec: "$(python.version)"
         displayName: "Use Python $(python.version)"
-      - powershell: |
+
+      - script: |
+          git clone https://github.com/nerdvegas/rez.git rez-src
+          cd rez-src
+          pip install .
+        condition: eq(variables['rez.project'], 'rez')
+        displayName: "pip install rez (for API)"
+
+      - script: |
+          pip install bleeding-rez
+        condition: eq(variables['rez.project'], 'bleeding-rez')
+        displayName: "pip install bleeding-rez"
+
+      - script: |
+          pip install PySide
+        condition: startsWith(variables['python.version'], '2.')
+        displayName: "pip install PySide"
+
+      - script: |
+          pip install PySide2
+        condition: startsWith(variables['python.version'], '3.')
+        displayName: "pip install PySide2"
+
+      - script: |
           pip install . --no-deps
         displayName: "pip install"
+
+      - script: |
+          python -m unittest discover
+        displayName: "run tests"
 
 
   # -----------------------------------------------------------------------
