try fixing "XDG_RUNTIME_DIR not set"

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,6 +102,7 @@ jobs:
         displayName: "Setup Xvfb"
 
       - script: |
+          export DISPLAY=:99
           xvfb-run sudo nosetests
         displayName: "Run tests"
 
