devop ubuntu pip install pyside2
pyside2 from apt-get is at 5.12.8, which
seems not able to get delegate widget from
index. pip install latest pyside2 solved
the problem (5.15.1).

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,6 +85,7 @@ jobs:
                                python3-pyside2.qtgui \
                                python3-pyside2.qtwidgets \
                                python3-pyside2.qtsvg
+          sudo pip install pyside2
           sudo python -c "from PySide2 import QtCore;print(QtCore.__version__)"
         condition: startsWith(variables['python.version'], '3.')
         displayName: "Install PySide2"
